mediastack/tautulli/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-deployment
  namespace: mediastack
spec:
  selector:
    matchLabels:
      app: tautulli
  replicas: 1
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: lscr.io/linuxserver/tautulli:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
        volumeMounts:
        - mountPath: /config
          name: tautulli-config
      volumes:
      - name: tautulli-config
        persistentVolumeClaim:
          claimName: tautulli-config-pvc
