mediastack/tautulli/svc-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-service
  namespace: mediastack
spec:
  selector:
    app: tautulli
  ports:
    - name: tautulli-web
      port: 80
      targetPort: 8181
      protocol: TCP
