mediastack/tautulli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: mediastack
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: media.sancaktar.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli-service    
            port:
              number: 80
